tests/snapshots/run_wpt_conformance__onnx_conv2d_float16_4D_input_and_filter_tensors_options_inputLayout__nhwc_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "conv2d.https.any.js",
    "conv2d float16 4D input and filter tensors options.inputLayout='nhwc'",
    "onnx",
    "PASS",
)
